# my_project

./: .env.example  .gitignore  AGENTS.md  PROJECT_HANDOFF.md  README.md  pyproject.toml
agent-monitor/: README.md  run.py
agent-monitor/agent_monitor/: __init__.py  app.py  collector.py  config.py
agent-monitor/deploy/: agent-monitor.service
agent-monitor/docs/: personal-agents-observability-architecture.excalidraw
agent-monitor/static/: app.js  index.html  styles.css
feishu-obsidian-capture/: .env.example  .gitignore  README.md  requirements.txt  run.py
feishu-obsidian-capture/feishu_obsidian_capture/: __init__.py  config.py  daily_job.py  git_sync.py  history.py  llm.py  memory_index.py  morning_job.py  obsidian.py  service.py  state.py
feishu-obsidian-capture/scripts/: install_launch_agent.py  (+2 more)
feishu-podcast-guide/: .env.example  .gitignore  README.md  feishu-podcast-guide-architecture.excalidraw  requirements.txt  run.py
feishu-reading-agent/: .env.example  .gitignore  README.md  requirements.txt  run.py
interview-audio-pipeline/: README.md
openclaw-infoflow-coach/: .env.example  .gitignore  README.md
personal-ai-website/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  index.html  package-lock.json  package.json  script.js  styles.css
personal-memory-researcher/: .gitignore  README.md  setup.py
scripts/: dev-interview-pipeline.sh  dev-personal-website.sh  dev-stack.sh  dev-verbal-expression-coach.sh
verbal-expression-coach/: .gitignore  README.md  requirements.txt
video/: .gitignore  README.md
(+295 files in other folders)
