[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "interview-audio-pipeline"
version = "0.1.0"
description = "Automate interview audio transcription, summarization, and Notion ingestion."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Codex" }]
dependencies = [
  "bce-python-sdk>=0.9.0",
  "faster-whisper>=1.1.0",
]

[project.scripts]
interview-pipeline = "interview_pipeline.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
